--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
             console.log(location);
 
-    $().ready(function () {
-        var queryURL = "https://maps.googleapis.com/maps/api/js?key=AIzaSyDPANM_Lp4yJ2jWqr-MPK4pAT8HU5VQizA&callback=initMap&callback=?";
+//     $().ready(function () {
+//         var queryURL = "https://maps.googleapis.com/maps/api/js?key=AIzaSyDPANM_Lp4yJ2jWqr-MPK4pAT8HU5VQizA&callback=initMap&callback=?";
 
-        $.getJSON(queryURL, function (data) {
-        console.log(data)
-        });
-});
+//         $.getJSON(queryURL, function (data) {
+//         console.log(data)
+//         });
+// });
 
 
         });
